log/build_2024-06-11_22-42-53/adhoc/stderr.log
  File "/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py", line 68
    }
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 67

